[gd_scene load_steps=2 format=3 uid="uid://dbhp7cy8lhc3lf24"]

[ext_resource type="Script" path="res://addons/universal_framework/game/ui/game_hud.gd"]

[node name="GameHUD" type="CanvasLayer"]
layer = 10
script = ExtResource("1")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_left = 0.0
anchors_top = 0.0
anchors_right = 1.0
anchors_bottom = 1.0
mouse_filter = 2

[node name="TopLeftPanel" type="PanelContainer" parent="Control"]
layout_mode = 2
anchors_left = 0.0
anchors_top = 0.0
anchors_right = 0.2
anchors_bottom = 0.15
offset_left = 10.0
offset_top = 10.0

[node name="MarginContainer" type="MarginContainer" parent="Control/TopLeftPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Control/TopLeftPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="LevelLabel" type="Label" parent="Control/TopLeftPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Level: 1"
theme_override_font_sizes/font_size = 18

[node name="XPLabel" type="Label" parent="Control/TopLeftPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Experience"
theme_override_font_sizes/font_size = 12

[node name="XPBar" type="ProgressBar" parent="Control/TopLeftPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(200, 20)
value = 50.0

[node name="XPText" type="Label" parent="Control/TopLeftPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0 / 100"
theme_override_font_sizes/font_size = 10

[node name="SkillsPanel" type="PanelContainer" parent="Control"]
layout_mode = 2
anchors_left = 0.8
anchors_top = 0.0
anchors_right = 1.0
anchors_bottom = 0.2
offset_left = -10.0
offset_top = 10.0

[node name="MarginContainer2" type="MarginContainer" parent="Control/SkillsPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/SkillsPanel/MarginContainer2"]
layout_mode = 2

[node name="SkillsLabel" type="Label" parent="Control/SkillsPanel/MarginContainer2/VBoxContainer2"]
layout_mode = 2
text = "Skills"
theme_override_font_sizes/font_size = 14

[node name="SkillsContainer" type="HBoxContainer" parent="Control/SkillsPanel/MarginContainer2/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 5

[node name="BuffsPanel" type="PanelContainer" parent="Control"]
layout_mode = 2
anchors_left = 0.0
anchors_top = 0.85
anchors_right = 1.0
anchors_bottom = 1.0
offset_left = 10.0
offset_top = -10.0
offset_bottom = -10.0

[node name="MarginContainer3" type="MarginContainer" parent="Control/BuffsPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer3" type="VBoxContainer" parent="Control/BuffsPanel/MarginContainer3"]
layout_mode = 2

[node name="BuffsLabel" type="Label" parent="Control/BuffsPanel/MarginContainer3/VBoxContainer3"]
layout_mode = 2
text = "Active Buffs"
theme_override_font_sizes/font_size = 14

[node name="BuffsContainer" type="HBoxContainer" parent="Control/BuffsPanel/MarginContainer3/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 5
